[package]
name = "tauri-usb-headphone-controller"
version = "0.0.0"
description = "A Tauri App for USB and Headphone Control"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-create-dir", "dialog-open", "dialog-message", "dialog-confirm", "fs-write-file", "fs-exists", "fs-remove-file", "fs-remove-dir", "fs-copy-file", "shell-open", "dialog-save", "fs-rename-file", "dialog-ask", "fs-read-file", "fs-read-dir"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-opener = "1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
